--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,23 @@ select{
     cursor: pointer;
     user-select: none;
 }
+#contact{
+    text-align: center;
+    font-size: 15px;
+}
+.contact {
+	padding: 50px 0px;
+    width: 100%;
+    text-align: center;
+    font-family: 'Cabin Sketch';
+}
+.contact h3 {
+	margin-top: 0px;
+	margin-bottom: 50px;
+	border-bottom: 2px solid green;
+	display: inline-block;
+	line-height: 35px;
+}
+#infor{
+    text-align: center;
+}
