--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Cabin Sketch';
-    background-color:plum;
+    background-color:lightseagreen;
     color: rgb(255, 255, 255, 0.9);
     height: 100%;
     Overflow-y:scroll;
